# collectra_gui

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  README.md  annotorious_integration_plan.md  collectra_gui.spec  implementation_plan.md  index.html  install.ps1  install.sh  overview_architecture.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  release.yml  testing.yml
collectra_gui/: api.py  index.html  lineage_display.py  utils.py
docs/: api.rst  conf.py  index.rst  lineage.rst
example.collectra/: results.yaml
src/: index.js
src/annotorious/: handlers.js  index.js  setup.js
src/converter/: annotoriousToYaml.js  index.js  yamlToAnnotorious.js
src/io/: index.js  loadCollectra.js  saveCollectra.js
src/state/: index.js  parentIndex.js  selectionManager.js
src/ui/: index.js  tableHandlers.js  textTable.js
tests/: __init__.py  conftest.py  test_api.py  test_lineage_display.py
